QL-20 написал сценарии тестирования и шаги проверок